--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="links-div navbar-nav ml-auto">
                         <a class="nav-link mr-3" id="nav-Items-1" href="#">Home </a>
                         <a class="nav-link mr-3" id="nav-Items-2" href="#aboutsection">About Us</a>
-                        <a class="nav-link mr-3" id="nav-Items-3" href="#vision-missionsection">Events</a>
+                        <a class="nav-link mr-3" id="nav-Items-3" href="#vision-missionsection">Members</a>
                         <!-- <a class="nav-link mr-3" id="nav-Items-4" href="#">Objective</a> -->
                         <a class="nav-link mr-3" id="nav-Items-5" href="#" onclick="display('sectioncontactpage')">Contact Us</a>
                     </div>
