--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-7 d-flex flex-column justify-content-center p-5">
                     <div>
-                        <h2 class="about-subtext">X-Kernel Coding Club</h2>
+                        <h2 class="about-subtext">X-Kernel</h2>
+                        <h3>Coding Club</h3>
                         <img src="https://res.cloudinary.com/djdbkqdrc/image/upload/v1679920367/Aloges/Aboutimg_uak9om.png" class="about-img d-lg-none" width="100%">
-                        <h3 class="about-submain pt-5">GRIET - Coding Club</h3>
+                        <!-- <h3 class="about-submain pt-5">GRIET - Coding Club</h3> -->
                         <p class="about-para">Coding club is a free and open source programming learning community at the GRIET....
                             The aim of this club is to promote the development of coding skills among the students.
                             Coding club is in a community where you can get help with your coding project, or just hang out with other people who are learning how to code<br>
