--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="row">
                 <div class="footer p-5">
-                    <div class="col-12 col-lg-6">
+                    <div class="about col-12 col-lg-6">
                         <h1 class="footer-main-text"><span class="footer-span">Algoes</span> - Coding Club</h1>
                         <hr style="width: 300px; height: 2px; border-width:0; color:#fff; background-color: #fff">
                         <p class="footer-sub-para">To promote the importance of coding and assist students to improve their problem solving skills. Coding is an essential skill that can help you land a job in the future, and it is also an important part of our future economy.</p>
