--- a/index.html
+++ b/index.html
@@ -115,11 +115,16 @@
                         <!-- Copyrights --> © Algoes-All rights are reserved | developed by <a href="https://www.instagram.com/iamrahulkota/" class="last-footer-link">
                             <!-- <span class="last-footer-span">@iamrahulkota</span> -->
                         </a>
-                    </p>
+                </p>
                 </div>
             </div>
         </div>
 
+        <p class="last-footer pt-5">
+            <!-- Copyrights --> © Algoes-All rights are reserved | developed by <a href="https://www.instagram.com/iamrahulkota/" class="last-footer-link">
+            <!-- <span class="last-footer-span">@iamrahulkota</span> -->
+            </a>
+        </p>
 
     </div>
 
