--- a/index.html
+++ b/index.html
@@ -111,21 +111,14 @@
                                 </svg>Nikhil</a>
                         </div>
                     </div>
-                    <p class="last-footer pt-5">
-                        <!-- Copyrights --> © Algoes-All rights are reserved | developed by <a href="https://www.instagram.com/iamrahulkota/" class="last-footer-link">
-                            <!-- <span class="last-footer-span">@iamrahulkota</span> -->
-                        </a>
-                </p>
                 </div>
             </div>
-        </div>
-
-        <p>
+            <p class="last-footer pt-5>
             <!-- Copyrights --> © Algoes-All rights are reserved | developed by <a href="https://www.instagram.com/iamrahulkota/" class="last-footer-link">
             <!-- <span class="last-footer-span">@iamrahulkota</span> -->
             </a>
         </p>
-
+        </div>
     </div>
 
 
