--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <a class="nav-link mr-3" id="nav-Items-1" href="#" onclick="display('sectionHome')">Home</a>
                         <a class="nav-link mr-3" id="nav-Items-2" href="#aboutsection">Events</a>
                         <a class="nav-link mr-3" id="nav-Items-3" href="#vision-missionsection">Members</a>
-                        <a class="nav-link mr-3" id="nav-Items-4" href="#">Objective</a>
+                        <!--<a class="nav-link mr-3" id="nav-Items-4" href="#">Objective</a>-->
                         <a class="nav-link mr-3" id="nav-Items-5" href="#" onclick="display('sectioncontactpage')">Contact Us</a>
                     </div>
                 </div>
