--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                 <div class="contact-email">Email us at :</div>
                 <a href="mailto:algoesgriet@gmail.com" class="contact-email-link">algoesgriet@gmail.com</a>
             </div>
+            <div class="col-12 pt-3 pl-5">
+                <div class="contact-email">Contact us at :</div>
+                <a href="tel:+917702991997" class="contact-email-link">+917702991997</a>
+            </div>
             <div class="col-12 p-3 pl-5">
                 <a href="https://www.youtube.com/@algoesgriet">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00" class="bi bi-youtube mr-3" viewBox="0 0 16 16">
